--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.7",
     "socket.io": "^4.7.2",
     "stripe": "^13.11.0",
     "validator": "^13.11.0"
