--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^6.9.7",
     "socket.io": "^4.7.2",
     "stripe": "^13.11.0",
+    "twilio": "^4.19.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
